--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.3",
     "web-vitals": "^2.1.4"
   },
